--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "build:css": "tailwindcss -i ./styles/tailwind-input.css -o ./styles/tailwind.css --minify",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "24.5.0",
     "@types/react": "19.1.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.1.2",
+    "jsdom": "^25.0.1",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.2.5",
     "typescript": "5.9.2"
   },
   "dependencies": {
